<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Droid Link</string>
    <string name="account_selection">Accounts</string>
    <string name="select_account">Select an account for connecting your device:</string>
    <string name="refresh">Refresh</string>
    <string name="error">Sorry!</string>
    <string name="no_account_available">No Google account available!</string>
    <string name="no_events">No events.</string>
    <string name="settings">Settings</string>
    <string name="unknown_number">Unknown</string>
    <string name="auth_error">Failed to authenticate.</string>
    <string name="auth_pending">Authenticating...</string>
    <string name="please_wait">Please wait</string>
    <string name="device_setup_running">Registering device...</string>
    <string name="events_on_this_device">Events</string>
    <string name="ignore_missed_calls">Ignore missed calls</string>
    <string name="ignore_received_sms">Ignore received SMS</string>
    <string name="admin">Administration</string>
    <string name="delete_data">Delete database</string>
    <string name="confirm_delete_data">All data will be deleted.</string>
    <string name="deleting_data">Deleting data...</string>
    <string name="switch_user_account">Switch user account</string>
    <string name="delete_event">Delete event</string>
    <string name="call">Call</string>
    <string name="compose_sms">Compose SMS</string>
    <string name="confirm_delete_event">This event will be permanently deleted.</string>
    <string name="missed_call">Missed call.</string>
    <string name="received_new_event">Received new event</string>
    <string name="set_event_lifetime">Delete events</string>
    <string name="delete_events_after">Delete after...</string>
    <string name="one_day">1 day</string>
    <string name="three_days">3 days</string>
    <string name="one_week">1 week</string>
    <string name="two_weeks">2 weeks</string>
    <string name="one_month">1 month</string>
</resources>
