<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/events_on_this_device">
        <CheckBoxPreference android:title="@string/ignore_missed_calls"
            android:key="ignoreMissedCalls"></CheckBoxPreference>
        <CheckBoxPreference android:title="@string/ignore_received_sms"
            android:key="ignoreReceivedSms"></CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/admin">
        <ListPreference android:title="@string/set_event_lifetime" android:dialogTitle="@string/delete_events_after" android:key="deleteEventsAfter"></ListPreference><Preference android:key="deleteData" android:title="@string/delete_data"></Preference>
        
    </PreferenceCategory>
</PreferenceScreen>
